[package]
name = "ytdl"
authors = ["cssivision <cssivision@gmail.com>"]
version = "0.1.5"
license = "MIT"
repository = "https://github.com/cssivision/ytdl"
homepage = "https://github.com/cssivision/ytdl"
description = "youtube download cli in rust."
readme = "README.md"
edition = "2018"

[[bin]]
name = "ytdl"
path = "src/bin/main.rs"

[dependencies]
clap = "^2"
log = "^0.4"
env_logger = "^0.9"
url = "^2.2"
reqwest = { version = "^0.11", features = ["json", "rustls-tls"], default-features = false }
lazy_static = "^1.4"
serde = { version =  "^1", features = ["derive"]}
serde_json = "^1.0"
pbr = "^1.0"
error-chain = "^0.12"
simple-error = "^0.2"
